# qualfilter

./: .gitignore  Apptainer  LICENSE  README.md  build.sh  milton_build.sh  test.sh
src/: CMakeLists.txt  qualfilter.cpp
